<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/Ms10"
    android:layout_marginRight="@dimen/Ms10"
    android:gravity="center">

    <ImageView
        android:id="@+id/Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="@dimen/Ms10"
        android:layout_marginRight="@dimen/Ms10"
        android:elevation="@dimen/Ms5"
        android:layout_alignParentRight="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/Ms15"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/Ms25"
                android:layout_marginBottom="@dimen/Ms25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/Ms20"
                    android:layout_marginRight="@dimen/Ms20"
                    android:textAlignment="center"
                    android:textSize="@dimen/Ms16"
                    android:text="@string/AboutAPK"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/Ms20"
                    android:layout_marginRight="@dimen/Ms20"
                    android:textAlignment="center"
                    android:textSize="@dimen/Ms16"
                    android:layout_marginTop="@dimen/Ms20"
                    android:text="@string/AboutSDK"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/Ms20"
                    android:layout_marginRight="@dimen/Ms20"
                    android:textAlignment="center"
                    android:textSize="@dimen/Ms16"
                    android:layout_marginTop="@dimen/Ms20"
                    android:text="@string/AboutVersion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/Ms20"
                    android:layout_marginRight="@dimen/Ms20"
                    android:textAlignment="center"
                    android:textSize="@dimen/Ms16"
                    android:layout_marginTop="@dimen/Ms20"
                    android:text="@string/AboutApps"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>